Fix all PR review comments: typos, null-checks, scope docs, type preservation, template params, namespace builder, identifier sanitization, return value
This commit addresses all critical review comments from PR #26:

1. Fixed typo: 'ependent_template_specialization_type' -> 'dependent_template_specialization_type'
   - All 5 occurrences in clang-frontend-type.cpp corrected

2. Added null-check for getIdentifier() in DependentTemplateSpecializationType
   - Prevents crashes on operator/literal templates (e.g., T::template operator+<U>)
   - Falls back to generic name when identifier is NULL

3. Added documentation for topScopeStack() limitation
   - Explains why nested scope resolution may be incomplete in template contexts
   - Notes that full scope info may only be available at instantiation time

4. Added documentation for empty expression lists
   - Clarifies that empty argument lists are intentional for default constructors
   - Explains handling of template-dependent arguments that fail traversal

5. Fixed LLVM include directory list expansion (P1)
   - Changed from embedding semicolon-separated list directly to foreach() iteration
   - Ensures all LLVM include paths are searched on systems with multiple installations
   - Prevents clang from finding wrong headers when multiple LLVM versions installed

6. Fixed constructor expression type preservation (P1)
   - Changed from SgFunctionCallExp (void type) to SgConstructorInitializer
   - Ensures constructed class type is preserved, not void from constructor function
   - Maintains SAGE AST type invariants

7. Fixed namespace reopening declaration ordering (P1)
   - Removed manual recreation of namespace definition and symbol insertion
   - Now uses definition created by buildNamespaceDeclaration_nfi
   - Builder already handles symbol lookup, global_definition linking, and symbol insertion
   - Prevents duplicate symbols and preserves proper global_definition wiring

8. Fixed enum constant type preservation (P1)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -403,6 +403,17 @@ message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 message(STATUS "LLVM include dirs: ${LLVM_INCLUDE_DIRS}")
 
+# CRITICAL FIX: Force LLVM 20 headers by overriding compiler's built-in search paths
+# Must be set BEFORE project() or any compiler checks
+# Iterate over LLVM_INCLUDE_DIRS list to properly add each directory with -isystem
+# (LLVM_INCLUDE_DIRS is a semicolon-separated list and must be expanded correctly)
+foreach(llvm_include_dir ${LLVM_INCLUDE_DIRS})
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -isystem ${llvm_include_dir}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -isystem ${llvm_include_dir}")
+endforeach()
+# Also add to CMake's include directories with BEFORE to ensure priority
+include_directories(BEFORE SYSTEM ${LLVM_INCLUDE_DIRS})
+
 # Prefer linking against shared LLVM library when available to avoid duplicate globals
 # Try two methods to detect if shared LLVM library exists:
 # Method 1: Check if "LLVM" target is in LLVM_AVAILABLE_LIBS (works on many systems)
